Correct tooltip color in dark mode

--- a/src/assets/scss/themes/dark/_custom-properties.scss
+++ b/src/assets/scss/themes/dark/_custom-properties.scss
@@ -101,6 +101,7 @@
         --fwindow-background: var(--theme-dark-color-7);
         --fwindow-body-background: var(--theme-dark-color-7);
         --fwindow-popover-box-shadow: none;
+        --fwindow-popover-background: var(--theme-dark-color-7);
 
         .fwindow-popover {
             --fwindow-popover-background: var(--theme-dark-color-6);
